--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hompage": "https://dcodelabtutor.github.io/react_portfolio_basic",
+  "hompage": "https://reactam.github.io/react_pf_basic",
   "name": "react_pf_basic",
   "version": "0.1.0",
   "private": true,
