redux기본기능 완료

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://reactam.github.io/react_pf_basic",
+  "homepage": "https://dcodelabtutor.github.io/react_dcodelab",
   "name": "react_pf_basic",
   "version": "0.1.0",
   "private": false,
